Feature: enhance income mapping strategy with new RsInntekter class and update tests